--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ PRISMA_SCHEMA_DISABLE_ADVISORY_LOCK=
 RESEND_API_KEY=
 TWILIO_WHATSAPP_ACCOUNT_SID=
 TWILIO_WHATSAPP_AUTH_TOKEN=
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
