--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@tanstack/react-table": "^8.20.5",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "embla-carousel-autoplay": "^8.2.1",
@@ -52,6 +53,7 @@
     "react": "^18",
     "react-canvas-confetti": "^2.0.7",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.10",
     "react-email": "^3.0.1",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
