--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ PRISMA_SCHEMA_DISABLE_ADVISORY_LOCK=
 RESEND_API_KEY=
 TWILIO_WHATSAPP_ACCOUNT_SID=
 TWILIO_WHATSAPP_AUTH_TOKEN=
-CLOUDINARY_CLOUD_NAME=
-CLOUDINARY_API_KEY=
-CLOUDINARY_API_SECRET=
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=
+NEXT_PUBLIC_CLOUDINARY_API_KEY=
+NEXT_PUBLIC_CLOUDINARY_API_SECRET-f30bvQJK4=
+NEXT_PUBLIC_CLOUDINARY_API_GOOGLE_IMAGE_SEARCH=
