--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "motion-number": "^0.1.7",
     "next": "14.2.6",
     "next-auth": "^5.0.0-beta.20",
+    "next-cloudinary": "^6.16.0",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-canvas-confetti": "^2.0.7",
