--- a/package.json
+++ b/package.json
@@ -53,12 +53,15 @@
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-canvas-confetti": "^2.0.7",
+    "react-datepicker": "^7.5.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.10",
     "react-email": "^3.0.1",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
-    "recharts": "^2.12.7",
+    "react-simple-maps": "^3.0.0",
+    "react-tooltip": "^5.28.0",
+    "recharts": "^2.13.0",
     "resend": "^4.0.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
@@ -73,6 +76,7 @@
     "@types/node": "^20.16.1",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-simple-maps": "^3.0.6",
     "eslint": "^8",
     "eslint-config-next": "14.2.6",
     "eslint-config-prettier": "^9.1.0",
