--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,4 @@ NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=
 NEXT_PUBLIC_CLOUDINARY_API_KEY=
 NEXT_PUBLIC_CLOUDINARY_API_SECRET-f30bvQJK4=
 NEXT_PUBLIC_CLOUDINARY_API_GOOGLE_IMAGE_SEARCH=
+OPENAI_API_KEY=
