--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.71",
     "@formkit/tempo": "^0.1.2",
     "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.18.0",
@@ -37,6 +38,7 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@react-email/components": "^0.0.25",
     "@tanstack/react-table": "^8.20.5",
+    "ai": "^3.4.33",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.5.1",
@@ -44,6 +46,7 @@
     "cmdk": "^1.0.0",
     "embla-carousel-autoplay": "^8.2.1",
     "embla-carousel-react": "^8.2.1",
+    "framer-motion": "^11.11.11",
     "fuse.js": "^7.0.0",
     "lucide-react": "^0.435.0",
     "motion-number": "^0.1.7",
@@ -51,6 +54,7 @@
     "next-auth": "^5.0.0-beta.20",
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.3.0",
+    "openai": "^4.71.0",
     "react": "^18",
     "react-canvas-confetti": "^2.0.7",
     "react-datepicker": "^7.5.0",
