--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "twilio": "^5.3.2",
     "use-debounce": "^10.0.3",
     "vaul": "^0.9.3",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
   },
